--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,10 @@ body {
   width: 100%;
 }
 
-header {
+.header {
   font-family:'Pompiere', cursive;
-  font-size: 15px;
+  font-weight: normal;
+  font-size: 25px;
   background-color: rgba(255, 255, 255, 0.9);
 }
 
@@ -29,7 +30,7 @@ nav li{
   color: #666666;
   display: inline-block;
   font-family: 'Pompiere', cursive;
-  font-size: 16px;
+  font-size: 25px;
   font-weight: 100;
   letter-spacing: 2px;
   margin: 20px;
@@ -37,16 +38,38 @@ nav li{
 }
 
 .content-box {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-    width: 100%;
-    height: 25%;
-    margin: 0;
+
+    -webkit-flex-flow: row wrap;
+    justify-content: space-around;
 }
 
 .blocks {
-    border: solid 2px black;
-    width: 200px;
-    height: 200px;
-    margin: 20px;
+  padding: 5px;
+  width: 400px;
+  height: 250px;
+  margin-top: 10px;
+
+  line-height: 150px;
+  color: black;
+  font-family: 'Pompiere', cursive;
+  font-size: 2em;
+  border: solid 2px black;
+  text-align: center;
+}
+
+.quote {
+  font-family: 'Pompiere', cursive;
+  font-style: italic;
+  font-size: 50px;
+  padding-top: 60px;
+
 }
