--- a/css/styles.css
+++ b/css/styles.css
@@ -95,10 +95,23 @@ nav a{
 /**about page image**/
 img {
   display: block;
-  margin: 0px 0px 30px 0px;
-  max-width: 150px;
+  max-width: 250px;
   border-radius: 100%;
   padding: 50px;
+  margin-left: auto;
+  margin-right: auto
+}
+p{
+  padding: 0;
+  color: #666666;
+  text-decoration: none;
+  display: inline-block;
+  font-family: 'Pompiere', cursive;
+  font-size: 25px;
+  font-weight: 100;
+  letter-spacing: 2px;
+  margin: 20px;
+  text-transform: uppercase;
 }
 
 #thumbnail {
