--- a/css/styles.css
+++ b/css/styles.css
@@ -2,17 +2,6 @@ body {
   text-align: center;
 }
 
-.navigation {
-  background-color: rgba(255, 255, 255, 0.9);
-  height: auto;
-  text-align: center;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 999;
-  width: 100%;
-}
-
 .header {
   font-family:'Pompiere', cursive;
   font-weight: normal;
@@ -95,12 +84,13 @@ nav a{
 /**about page image**/
 img {
   display: block;
-  max-width: 250px;
+  max-width: 150px;
   border-radius: 100%;
   padding: 50px;
   margin-left: auto;
   margin-right: auto
 }
+
 p{
   padding: 0;
   color: #666666;
@@ -115,6 +105,20 @@ p{
 }
 
 #thumbnail {
-  max-width: 1000px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.media-handles{
+  text-align: center;
+  display: inline;
+  max-width: 60px;
+  border-radius: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer p{
+  max-width: 900px;
   margin: 0 auto;
 }
