--- a/css/styles.css
+++ b/css/styles.css
@@ -200,3 +200,33 @@ footer p{
 	border: 1px solid #666;
   border-radius: 80%;
 }
+
+/**Sparkleh jquery effect by simeydotme**/
+@import url(https://fonts.googleapis.com/css?family=Lato:400,900|Montez);
+
+$buttonBackground: #2c3e50;
+$buttonColor: rgba(255,255,255,1);
+
+.sparkley {
+
+  background: lighten( $buttonBackground , 10% );
+  color: $buttonColor;
+  border: none;
+
+  padding: 16px 36px;
+  font-weight: normal;
+
+  border-radius: 3px;
+  transition: all 0.25s ease;
+
+  box-shadow: 0 38px 32px -23px black;
+  margin: 0 1em 1em;
+
+  &:hover {
+
+    background: $buttonBackground;
+    color: transparentize( $buttonColor,0.8 );
+
+  }
+
+}
